# alphamap-gen

./: .gitmodules  CMakeLists.txt  README.md
include/: util.h
src/: main.c  util.c
